--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
                 <div class="row">
                     <div class="col-md-5th col-xs-12">
                         <div class="block hover-shadow" style="height: 200px"  data-aos="zoom-in">
-                            <img src="assets/svg/cards/icons-date.svg" alt/><br/>
-                            <p class="text-center">25 лет работы</p>
+                            <img src="assets/svg/cards/icon-percent.svg" alt/><br/>
+                            <p class="text-center">Подавляющее большинство выигранных дел</p>
                         </div>
                     </div>
                     <div class="col-md-5th col-xs-12">
                         <div class="block hover-shadow" style="height: 200px"  data-aos="zoom-in">
-                            <img src="assets/svg/cards/icon-percent.svg" alt/><br/>
-                            <p class="text-center">Подавляющее большинство выигранных дел</p>
+                            <img src="assets/svg/cards/icons-date.svg" alt/><br/>
+                            <p class="text-center">25 лет работы</p>
                         </div>
                     </div>
                     <div class="col-md-5th col-xs-12">
@@ -210,21 +210,21 @@
                             <div class="text-center mb-2 mt-3 d-block">
                             <h4 data-aos="zoom-in"><b>Основные</b></h4>
                             </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Защита интересов доверителя в корпоративных спорах
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Сопровождение перевода земель из одной зоны функционального назначения в другую
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Представление интересов в суде / арбитражном суде
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Защита по уголовным делам
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Банкротство
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -232,27 +232,27 @@
                             <div class="text-center mb-2 mt-3 d-block">
                                 <h4 data-aos="zoom-in"><b>Юрлица</b></h4>
                             </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Арбитражные споры 
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Земельные правоотношения
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Уголовно-правовая защита
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Сложные коммерческие конфликты
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Взыскание задолженности
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Регистарция и ликвидация юрлиц
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Налоговые споры
-                            </div>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -260,21 +260,21 @@
                             <div class="text-center mb-2 mt-3 d-block">
                                 <h4 data-aos="zoom-in"><b>Физлица</b></h4>
                             </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Банковские споры
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Трудовые споры
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Семейные споры
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Наследственные споры
-                            </div>
-                            <div class="card-text hover-shadow" data-aos="zoom-in">
+                            </a>
+                            <a href="#contactForm" class="card-text hover-shadow" data-aos="zoom-in">
                                 Сопровождение бракоразводного процесса
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -303,8 +303,8 @@
         <!-- end about-section -->
 
 
-        <!-- start feature-section -->
-        <section class="feature-section section-padding">
+        <!-- start  -->
+        <section class=" section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1">
@@ -334,7 +334,7 @@
                                 <img src="assets/svg/steps/Group-1.svg">
                             </div>
                             <h3 class="card-title">Мы с вами свяжемся</h3>
-                            <p class="card-description">Наш специалист сообщит какие документы необходимо предоставить, а также согласует удобную Вам дату и время приёма</p>
+                            <p class="card-description">Наш специалист сообщит какие документы необходимо предоставить, а также согласует удобную Вам дату и время приёма.</p>
                         </div>
                     </div>
                     <div class="col col-lg-3 col-sm-6">
@@ -359,7 +359,7 @@
             </div>
             <!-- end container -->
         </section>
-        <!-- end feature-section -->
+        <!-- end  -->
 
         <!-- start team-section -->
         <section id="team" class="team-section section-padding">
@@ -413,7 +413,7 @@
         <!-- end team-section -->
 
 
-        <section id="saveForest" class="section-padding">
+        <section id="cases" class="section-padding">
             <div class="container-fluid text-center">
                 <div class="row">
                     <div class="forest">
@@ -512,7 +512,7 @@
         <!-- end contact-section -->
 
         <!-- start blog-section -->
-        <section id="blog" class="blog-section section-padding">
+        <!-- <section id="blog" class="blog-section section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col col-lg-4">
@@ -520,7 +520,7 @@
                             <div class="icon">
                                 <img src="assets/svg/titles/Icon-6.svg">
                             </div>
-                            <!-- <span>Последние новости</span> -->
+                            <span>Последние новости</span>
                             <h2>Ознакомьтесь с нашими советами и новостями </h2>
                             <a href="#" class="theme-btn">Смотреть все</a>
                         </div>
@@ -551,8 +551,7 @@
                     </div>
                 </div>
             </div>
-            <!-- end container -->
-        </section>
+        </section> -->
         <!-- end blog-section -->
 
 
@@ -561,7 +560,7 @@
             <div class="upper-footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col col-lg-3 col-md-3 col-sm-6">
+                        <div class="col col-md-4 col-sm-6">
                             <div class="widget about-widget">
                                 <div class="widget-title">
                                     <h3>О нас</h3>
@@ -570,7 +569,7 @@
                                     Ваши задачи наиболее качественно</p>
                             </div>
                         </div>
-                        <div class="col col-lg-3 col-md-3 col-sm-6">
+                        <div class="col col-md-4 col-sm-6">
                             <div class="widget contact-widget service-link-widget">
                                 <div class="widget-title">
                                     <h3>Контакты</h3>
@@ -582,20 +581,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col col-lg-3 col-md-3 col-sm-6">
-                            <div class="widget link-widget line-widget-2">
-                                <div class="widget-title">
-                                    <h3>Полезные ссылки</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="#">Наши сервисы</a></li>
-                                    <li><a href="#">Наша команда</a></li>
-                                    <li><a href="#">Отзывы </a></li>
-                                    <li><a href="#">Новости и статьи</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-lg-3 col-md-3 col-sm-6">
+                        <div class="col col-md-4 col-sm-6">
                             <div class="widget link-widget line-widget-2">
                                 <div class="widget-title">
                                     <h3>Область практики </h3>
@@ -618,14 +604,6 @@
                         <div class="separator"></div>
                         <div class="col col-xs-12">
                             <p class="copyright">Copyright &copy; 2021 СПб ГКА. Все права защищены.</p>
-                            <div class="extra-link">
-                                <ul>
-                                    <li><a href="#">Политика конфиденциальности</a></li>
-                                    <li><a href="#">Условия </a></li>
-                                    <li><a href="#">О нас</a></li>
-                                    <li><a href="#">FAQ</a></li>
-                                </ul>
-                            </div>
                         </div>
                     </div>
                 </div>
