--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+    <meta name="google-site-verification" content="tj-0hbq7dGLuVodtallVBp2jQ6o-c4WMMgjBOpYjYi8" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
