--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta name="google-site-verification" content="tj-0hbq7dGLuVodtallVBp2jQ6o-c4WMMgjBOpYjYi8" />
+    <meta name="yandex-verification" content="520e8f8bb5dab3fd" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
