--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <li><a class="nav-item" href="#steps">4 Шага</a></li>
                             <li><a class="nav-item" href="#team">Команда</a></li>
                             <li><a class="nav-item" href="#cases">Кейсы</a></li>
-                            <li><a class="nav-item" href="#contacts">Контакты</a></li>
+                            <li><a class="nav-item" href="#contactForm">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -485,8 +485,8 @@
                             <!-- <p></p> -->
                         </div>
 
-                        <div class="contact-form">
-                            <form id="contactForm" class="contact-validation-active">
+                        <div class="contact-form"  id="contactForm">
+                            <form class="contact-validation-active">
                                 <div>
                                     <input id="formName" type="text" class="form-control" name="name" placeholder="Имя Фамилия">
                                 </div>
