--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                             <li><a class="nav-item" href="#steps">4 Шага</a></li>
                             <li><a class="nav-item" href="#team">Команда</a></li>
                             <li><a class="nav-item" href="#cases">Кейсы</a></li>
-                            <li><a class="nav-item" href="#contactForm">Контакты</a></li>
+                            <li><a class="nav-item" href="#contacts">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
