--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                     <div class="col-md-5th col-xs-12">
-                        <a  href="#smm" class="block hover-shadow" style="height: 200px"  data-aos="zoom-in">
+                        <a  href="#cases" class="block hover-shadow" style="height: 200px"  data-aos="zoom-in">
                             <img src="assets/svg/cards/icons-rupor.svg" alt/><br/>
                             <p class="text-center">О нас пишут СМИ</p>
                         </a>
@@ -294,7 +294,7 @@
                                     <img src="assets/images/cta-logo.png" alt>
                                 </div>
                                   
-                                <h2>+7 812-326-87-41</h2>
+                                <h2 style="color: #FFF">+7 812-326-87-41</h2>
                                 <a href="#contacts" class="theme-btn-s3">Записаться на прием</a>
                             </div>
                         </div>
@@ -464,7 +464,7 @@
                                 <li>
                                     <i class="fi flaticon-support"></i>
                                     <h4>Телефон</h4>
-                                    <p>+7 812-326-87-41</p>
+                                    <p style="color: #FFF">+7 812-326-87-41</p>
                                 </li>
                                 <li>
                                     <i class="fi flaticon-clock"></i>
