--- a/index.html
+++ b/index.html
@@ -439,10 +439,10 @@
                             <p>Адвокату Ольге Владимировне удалось отстоять интересы граждан. Изменения в Генеральный план, позволяющие осуществлять застройку леса, были признаны незаконными. </p>
                             <p>Благодаря квалифицированной юридической помощи и настойчивым действиям команды наших адвокатов, жители Колосково снова могут спокойно отдыхать на свежем воздухе, а лес спасён от вырубки. </p>
                             <p><br><b style="font-size: 20px;">Мы в новостях:</b><br> 
-                                Материал НТВ: <a href="https://www.ntv.ru/novosti/2467783">Жители поселка Колосково боятся застройки соснового леса рядом с озером</a><br> 
-                                Материал 47: <a href="https://47news.ru/articles/166459">Народ против "России" Ковальчука. Чей в итоге лес, тот и главный<br>  </a>
-                                Материал журнала «Собеседник»: <a href="https://pasmi.ru/archive/248970">Замашки Ковальчука — друг Путина отнял у жителей 50 га леса </a><br>
-                                Материал Pasmi: <a href="https://echo.msk.ru/blog/cur_blog/2243352-echo">Расследование Эха Москвы про дачу Ковальчука</a><br></p>
+                                Материал НТВ: <a href="https://www.ntv.ru/novosti/2467783">Жители поселка Колосково боятся застройки соснового леса рядом с озером</a>.<br> 
+                                Материал 47: <a href="https://47news.ru/articles/166459">Народ против "России" Ковальчука. Чей в итоге лес, тот и главный</a>.<br>  
+                                Материал журнала «Собеседник»: <a href="https://pasmi.ru/archive/248970">Замашки Ковальчука — друг Путина отнял у жителей 50 га леса</a>.<br>
+                                Материал Pasmi: <a href="https://echo.msk.ru/blog/cur_blog/2243352-echo">Расследование Эха Москвы про дачу Ковальчука</a>.<br></p>
                         </div>
                     </div>
                 </div>
