--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@
                         <ul id="navbarItems" class="nav navbar-nav">
                             <li><a class="nav-item" cli href="#about">О нас</a></li>
                             <li><a class="nav-item" href="#directions">Направления</a></li>
-                            <li><a class="nav-item" href="#steps">4 Шага</a></li>
                             <li><a class="nav-item" href="#team">Команда</a></li>
                             <li><a class="nav-item" href="#cases">Кейсы</a></li>
-                            <li><a class="nav-item" href="#contacts">Контакты</a></li>
                         </ul>
                     </div>
                 </div>
@@ -295,7 +293,7 @@
                                 </div>
                                   
                                 <h2 style="color: #FFF">+7 812-326-87-41</h2>
-                                <a href="#contacts" class="theme-btn-s3">Записаться на прием</a>
+                                <a href="#contacts" class="theme-btn-s3">Записаться на приём</a>
                             </div>
                         </div>
                     </div>
@@ -316,7 +314,7 @@
                             <div class="icon">
                                 <img src="assets/svg/titles/Icon-2.svg">
                             </div>
-                            <h2>4 шага до решения вашей проблемы</h2>
+                            <h2>О процессе работы</h2>
                         </div>
                     </div>
                 </div>
@@ -327,9 +325,9 @@
                             <div class="flex align-center justify-center text-justify">
                                 <img src="assets/svg/steps/Group.svg">
                             </div>
-                            <h3 class="card-title">Оставьте заявку</h3>
+                            <h3 class="card-title">Обратитесь к нам</h3>
                             <p class="card-description" style="text-align: center;">+7(812)326-87-41<br/>vs.lawoffice.spb@gmail.com</p>
-                            <a href='#contacts' class="theme-btn-s3 btn-card" style="text-align: center; width: 90%">Связаться с нами</a>
+                            <a href='#contacts' class="theme-btn-s3 btn-card" style="text-align: center; width: 90%">Оставьте заявку</a>
                         </div>
                     </div>
                     <div class="col col-lg-3 col-sm-6">
@@ -337,7 +335,7 @@
                             <div class="flex align-center justify-center ">
                                 <img src="assets/svg/steps/Group-1.svg">
                             </div>
-                            <h3 class="card-title">Обратитесь к нам –</br> мы с вами свяжемся</h3>
+                            <h3 class="card-title">Мы с вами свяжемся</h3>
                             <p class="card-description">Наш специалист сообщит какие документы необходимо предоставить, а также согласует удобную Вам дату и время приёма.</p>
                         </div>
                     </div>
@@ -439,10 +437,10 @@
                             <p>Адвокату Ольге Владимировне удалось отстоять интересы граждан. Изменения в Генеральный план, позволяющие осуществлять застройку леса, были признаны незаконными. </p>
                             <p>Благодаря квалифицированной юридической помощи и настойчивым действиям команды наших адвокатов, жители Колосково снова могут спокойно отдыхать на свежем воздухе, а лес спасён от вырубки. </p>
                             <p><br><b style="font-size: 20px;">Мы в новостях:</b><br> 
-                                Материал НТВ: <a href="https://www.ntv.ru/novosti/2467783">Жители поселка Колосково боятся застройки соснового леса рядом с озером</a>.<br> 
-                                Материал 47: <a href="https://47news.ru/articles/166459">Народ против "России" Ковальчука. Чей в итоге лес, тот и главный</a>.<br>  
-                                Материал журнала «Собеседник»: <a href="https://pasmi.ru/archive/248970">Замашки Ковальчука — друг Путина отнял у жителей 50 га леса</a>.<br>
-                                Материал Pasmi: <a href="https://echo.msk.ru/blog/cur_blog/2243352-echo">Расследование Эха Москвы про дачу Ковальчука</a>.<br></p>
+                                Материал НТВ: <a href="https://www.ntv.ru/novosti/2467783">Жители поселка Колосково боятся застройки соснового леса рядом с озером.</a><br> 
+                                Материал 47: <a href="https://47news.ru/articles/166459">Народ против "России" Ковальчука. Чей в итоге лес, тот и главный. </a><br> 
+                                Материал журнала «Собеседник»: <a href="https://pasmi.ru/archive/248970">Замашки Ковальчука — друг Путина отнял у жителей 50 га леса.</a><br>
+                                Материал Pasmi: <a href="https://echo.msk.ru/blog/cur_blog/2243352-echo">Расследование Эха Москвы про дачу Ковальчука.</a><br></p>
                         </div>
                     </div>
                 </div>
@@ -569,7 +567,7 @@
             <div class="upper-footer">
                 <div class="container">
                     <div class="row">
-                        <div class="col col-md-4 col-sm-6">
+                        <div class="col col-md-6 col-sm-6">
                             <div class="widget about-widget">
                                 <div class="widget-title">
                                     <h3>О нас</h3>
@@ -578,28 +576,17 @@
                                     Ваши задачи наиболее качественно</p>
                             </div>
                         </div>
-                        <div class="col col-md-4 col-sm-6">
-                            <div class="widget contact-widget service-link-widget">
-                                <div class="widget-title">
-                                    <h3>Контакты</h3>
-                                </div>
-                                <ul>
-                                    <li><img src="assets/svg/phone.svg" class="mr-2" />+7 812-326-87-41</li>
-                                    <li><img src="assets/svg/message.svg" class="mr-2" /> vs.lawoffice.spb@gmail.com</li>
-                                    <li><img src="assets/svg/location.svg" class="mr-2" /> Санкт-Петербург, Галерная 20, пом. 3Б</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-md-4 col-sm-6">
+                        <div class="col col-md-6 col-sm-6">
                             <div class="widget link-widget line-widget-2">
                                 <div class="widget-title">
                                     <h3>Область практики </h3>
                                 </div>
                                 <ul>
-                                    <li><a href="#">Закон о недвижимости </a></li>
+                                    <li><i>Страница в разработке"</i></li>
+                                    <!-- <li><a href="#">Закон о недвижимости </a></li>
                                     <li><a href="#">Страховая защита </a></li>
                                     <li><a href="#">Закон об образовании </a></li>
-                                    <li><a href="#">Криминал</a></li>
+                                    <li><a href="#">Криминал</a></li> -->
                                 </ul>
                             </div>
                         </div>
