--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
                     <div class="col-sm-6 col-xs-12">
                         <div class="block-user">
                             <img src="assets/images/about/about-1.png"/>
-                            <p style="padding-top: 10px;">Сиринов Александр Иванович</p>
+                            <p style="padding-top: 16px;"><b>Сиринов Александр Иванович</b></p>
                             <p style="font-size: 14px;">заведующий консультацией, адвокат</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-xs-12">
                         <div class="block-user">
                             <img src="assets/images/about/about-2.png"/>
-                            <p style="padding-top: 10px;">Сиринова Ольга Владимировна</p>
+                            <p style="padding-top: 16px; padding-bottom: 0px"><b>Сиринова Ольга Владимировна</b></p>
                             <p style="font-size: 14px;">адвокат</p>
                         </div>
                     </div>
@@ -292,7 +292,7 @@
                                     <img src="assets/images/cta-logo.png" alt>
                                 </div>
                                   
-                                <h2 style="color: #FFF">+7 812-326-87-41</h2>
+                                <h2 style="color: #FFF !important">+7 812-326-87-41</h2>
                                 <a href="#contacts" class="theme-btn-s3">Записаться на приём</a>
                             </div>
                         </div>
